[gd_scene load_steps=8 format=3 uid="uid://cf52cbj4eam28"]

[ext_resource type="Script" uid="uid://gtdv3hyug1dv" path="res://pause_menu.gd" id="1_kukqi"]
[ext_resource type="Shader" uid="uid://3j7v8ir6t0lm" path="res://pause_menu.gdshader" id="2_5d2l8"]
[ext_resource type="FontFile" uid="uid://cbt5xvtsjjscv" path="res://assets/fonts/PixelOperator8.ttf" id="3_7l7mv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v4r4p"]
shader = ExtResource("2_5d2l8")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_1s2dm"]
resource_name = "blur"
length = 0.3
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.15, 0, 0.15, 0, 0.591, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0, 0.3)
}

[sub_resource type="Animation" id="Animation_88e76"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_knqa7"]
_data = {
&"RESET": SubResource("Animation_88e76"),
&"blur": SubResource("Animation_1s2dm")
}

[node name="Pause_Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kukqi")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_v4r4p")
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../ColorRect")
libraries = {
&"": SubResource("AnimationLibrary_knqa7")
}

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -266.5
offset_top = -139.0
offset_right = 266.5
offset_bottom = 139.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_7l7mv")
theme_override_font_sizes/font_size = 20
text = "Resume"

[node name="Restart" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_7l7mv")
theme_override_font_sizes/font_size = 20
text = "Restart"

[node name="MainMenu" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_7l7mv")
theme_override_font_sizes/font_size = 20
text = "Main Menu"

[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
